--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,8 +1,16 @@
 .container {
-  padding: 0 2rem;
+  display: grid;
+  grid-template-columns: 250px 1fr;
+}
+
+.navigation {
+  grid-column: 1/2;
+  margin: 0;
+  padding: 0;
 }
 
 .main {
+  grid-column: 2/3;
   min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
@@ -26,17 +34,6 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
 }
 
 .title {
@@ -88,8 +85,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #e62edc;
+  border-color: #e62edc;
 }
 
 .card h2 {
@@ -101,16 +98,4 @@
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
 }
